--- a/views/_booking_selector.erb
+++ b/views/_booking_selector.erb
@@ -1,7 +1,7 @@
-	  <div id="highlight_block">
+	  <div id="highlight_block" class="bottom-margin-2lines">
 		  <form id="form-search-item" name="form-search-item" action="/p/booking/start">
         <div class="container_12">
-          <div class="grid_4">
+          <div class="prefix_1 grid_4">
 		      <div class="formrow">
 		      	<label for="datefrom" id="labeldatefrom" class="fieldtitle">
               <%=(booking_item_family.start_date_literal==:arrival)?(t.new_booking.arrival_date):(t.new_booking.pickup_date)%>
@@ -156,7 +156,7 @@
           </div>
           <% end %>
           </div>
-          <div class="grid_4">
+          <div class="grid_3">
             <div class="formrow">
               <% if booking_item_family.pickup_return_place %>  
               <div class="top-margin-2lines">
