--- a/views/console_booking.erb
+++ b/views/console_booking.erb
@@ -17,6 +17,11 @@
       <p class="centered_text"><a href="/admin/booking-extras"><%=t.booking_console.extras%></a></p>
     </div>
   </div>
+  <div class="grid_3">
+    <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
+      <p class="centered_text"><a href="/admin/booking-place-defs"><%=t.booking_console.places%></a></p>
+    </div>
+  </div>     
   <div class="grid_3"> 
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
       <p class="centered_text"><a href="/admin/booking-items"><%=t.booking_console.items%></a></p>
@@ -26,12 +31,12 @@
     <div class="box box-shadow guiblock background-color-2" style="padding: 3em">
       <p class="centered_text"><a href="/admin/bookings/rates"><%=t.booking_console.rates%></a></p>
     </div>
-  </div>
+  </div>  
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
       <p class="centered_text"><a href="/admin/bookings/availability"><%=t.booking_console.availability%></a></p>
     </div>
-  </div>       
+  </div>      
   <div class="grid_3">
     <div class="box box-shadow guiblock background-color-1"  style="padding: 3em">
       <p class="centered_text"><a href="/admin/bookings"><%=t.booking_console.reservations%></a></p>
@@ -51,5 +56,10 @@
     <div class="box box-shadow guiblock background-color-2"  style="padding: 3em">
       <p class="centered_text"><a href="/admin/bookings/summary"><%=t.booking_console.summary%></a></p>
     </div>
-  </div>         
+  </div>    
+  <div class="grid_3">
+    <div class="box box-shadow guiblock background-color-3"  style="padding: 3em">
+      <p class="centered_text more_contrast_text"><a href="/api/booking/create-rates"><%=t.booking_console.create_rates%></a></p>
+    </div>
+  </div>          
 </div>
