--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -427,7 +427,7 @@ label.form-reservation-error {
 #fs_summary_item #item_image {
   display: block;
   margin: 0 auto;
-  padding-bottom: 10px;
+  padding: 15px;
 }
 
 #fs_summary_extras {
