--- a/views/reserva-online.js.erb
+++ b/views/reserva-online.js.erb
@@ -1124,7 +1124,7 @@
       	      '<div class="container_12">'+	     	
       	        '<div itemscope itemtype="http://schema.org/Product" class="bottom-space bottom-separator car '+family+'">' +
       	          '<div class="grid_3">' +
-      	            '<img itemprop="image" src="/img/clase-'+family+'-big.png"/>' +
+      	            '<img itemprop="image" style="padding:20px" src="' + bookingDataSystem.families[family].photo + '"/>' + //src="/img/clase-'+family+'-big.png"/>' +
       	          '</div>' +
       	          '<div class="grid_3 top-margin">' +
       	            '<div class="car_detail_description"><span class="car_family_description" itemprop="name">'+bookingDataSystem.families[family].description+'</span></div>' +
@@ -1442,7 +1442,8 @@
              $('#return_place_extended').val( bookingModel.booking.return_place );
 
        	   case 'booking_item' :
-       	     var path='/img/clase-'+bookingModel.booking.item_id+'-big.png';
+       	     //var path='/img/clase-'+bookingModel.booking.item_id+'-big.png';
+             var path=bookingDataSystem.families[bookingModel.booking.item_id].photo;
        	     $('#item_image').attr('src',path);
 
        	   case 'booking_cost' :
