booking edition change dates

--- a/views/_booking_selector_js.erb
+++ b/views/_booking_selector_js.erb
@@ -23,7 +23,7 @@ require(['jquery', <% if defined?booking_js %>'booking_js'<% else %>'/js/booking
         } 
         else
         {
-          $('#pickup_place_other').hide();
+          $('#other_pickup_place').hide();
           $('#pickup_place_other').val(''); 
           $('#pickup_place_value').val(pickup_place);
         }
@@ -47,7 +47,7 @@ require(['jquery', <% if defined?booking_js %>'booking_js'<% else %>'/js/booking
         } 
         else
         {
-          $('#return_place_other').hide();
+          $('#other_return_place').hide();
           $('#return_place_other').val(''); 
           $('#return_place_value').val(return_place);
         }      
