--- a/views/reserva-online.js.erb
+++ b/views/reserva-online.js.erb
@@ -605,7 +605,7 @@
         } 
         else
         {
-          $('#pickup_place_other').hide();
+          $('#other_pickup_place').hide();
           $('#pickup_place_other').val('');	
           $('#pickup_place_value').val(pickup_place);
         }
@@ -629,7 +629,7 @@
         } 
         else
         {
-          $('#return_place_other').hide();
+          $('#other_return_place').hide();
           $('#return_place_other').val('');	
           $('#return_place_value').val(return_place);
         }      
