--- a/views/bookings_planning.erb
+++ b/views/bookings_planning.erb
@@ -1,3 +1,17 @@
+<style>
+  .rowTitle {
+    text-align: center;
+    display: block;
+  }
+  .spread_input {
+  	width: 1.2em;
+  }
+</style>
 <h3><%=t.bookings_planning.title%></h3>
-<table id="planning_table" style="font-size:0.55em">
+<div class="top-margin bottom-margin-1line">
+	<div class="centered_text"><span id="prev" class="all-space over_cursor background-color-2 color-2 all-border-solid">&lt;</span>&nbsp;<span id="month"></span> - <span id="year"></span>&nbsp;<span id="next" class="all-space over_cursor background-color-2 color-2 all-border-solid">&gt;</span></div>
+</div>
+<div>
+<table id="planning_table" style="table-layout: fixed;">
 </table>
+</div>
